# serializer version: 1
# name: test_deploy_function_secrets_without_external_access
  '''
  ╭─ Error ──────────────────────────────────────────────────────────────────────╮
  │ func1 defined with secrets but without external integration.                 │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  '''
# ---
# name: test_deploy_procedure_fully_qualified_name[database error]
  '''
  ╭─ Error ──────────────────────────────────────────────────────────────────────╮
  │ database of function custom_database.custom_schema.fqn_function_error is     │
  │ redefined in its name                                                        │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  '''
# ---
# name: test_deploy_procedure_fully_qualified_name[ok]
  '''
  +------------------------------------------------------------------------------+
  | object                                                  | type     | status  |
  |---------------------------------------------------------+----------+---------|
  | CUSTOM_DB.CUSTOM_SCHEMA.FQN_FUNCTION(name string)       | function | created |
  | MOCKDATABASE.CUSTOM_SCHEMA.FQN_FUNCTION_ONLY_SCHEMA(nam | function | created |
  | e string)                                               |          |         |
  | MOCKDATABASE.CUSTOM_SCHEMA.SCHEMA_FUNCTION(name string) | function | created |
  | CUSTOM_DB.MOCKSCHEMA.DATABASE_FUNCTION(name string)     | function | created |
  | CUSTOM_DB.CUSTOM_SCHEMA.DATABASE_FUNCTION(name string)  | function | created |
  | CUSTOM_DATABASE.CUSTOM_SCHEMA.FQN_FUNCTION3(name        | function | created |
  | string)                                                 |          |         |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_deploy_procedure_fully_qualified_name[schema error]
  '''
  ╭─ Error ──────────────────────────────────────────────────────────────────────╮
  │ schema of function custom_schema.fqn_function_error is redefined in its name │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  '''
# ---
